--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -23,6 +23,7 @@
                 text="Unpack"
                 description="Unpack the selected file">
             <add-to-group group-id="EditorPopupMenu" anchor="first"/>
+            <add-to-group group-id="ToolWindowContextMenu" anchor="first"/>
         </action>
     </actions>
 
